# email-manager

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml
email-analyser/: .env.example  BetterUpdating.md  DeclarativeStages.md  README.md  accounts.json.example  company_labels.yaml.example  discussion_categories.yaml  discussion_categories.yaml.example  pyproject.toml
email-analyser/docs/: MarketResearch.md  PipelineArchitecture.md
email-analyser/src/email_manager/: change_journal.py  cli.py  config.py  db.py  db_postgres.py  models.py
email-analyser/src/email_manager/agent/: repl.py
email-analyser/src/email_manager/ai/: agent_backend.py  base.py  claude_backend.py  claude_cli_backend.py  ollama_backend.py  prompts.py
email-analyser/src/email_manager/analysis/: analyse_discussions.py  base_extract.py  calendar_links.py  categoriser.py  company_labels.py  contact_memory.py  crm.py  discover_discussions.py  discussions.py  events.py  feedback.py  homepage.py  propose_actions.py  quick_update.py  summariser.py
email-analyser/src/email_manager/ingestion/: __init__.py  calendar_client.py  gmail_client.py  imap_client.py  parser.py  threading.py
email-analyser/src/email_manager/memory/: markdown_backend.py
email-analyser/src/email_manager/memory/strategies/: default.py
email-analyser/src/email_manager/pipeline/: batch.py  runner.py  stages.py
email-analyser/tests/: conftest.py  test_db.py  test_pipeline_runner.py  test_pipeline_stages.py  test_threading.py
email-analyser/tests/fixtures/: html_email.eml  reply.eml
tests/: conftest.py  (+3 more)
(+59 files in other folders)
